# cargo-vita

./: .CHANGELOG.md  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml  publish.yaml  release-pr.yaml  release.yaml
src/: check.rs  ftp.rs  main.rs  meta.rs  nc.rs
src/commands/: build.rs  coredump.rs  logs.rs  mod.rs  reboot.rs  run.rs  upload.rs
