[package]
name = "cargo-vita"
version = "0.1.3"
edition = "2021"
description = "Cargo wrapper for developing Sony PlayStation Vita homebrew apps"
repository = "https://github.com/vita-rust/cargo-vita"
license = "MIT OR Apache-2.0"

authors = ["vita-sdk", "Nikolay Arhipov <n@arhipov.net>"]
keywords = ["vita", "homebrew"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github", ".vscode", "target"]

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.18.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored = "2.0.4"
either = "1.9.0"
enum_dispatch = "0.3.12"
ftp = "3.0.1"
rustc_version = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tee = "0.1.0"
tempfile = "3.8.0"
walkdir = "2.4.0"

[package.metadata.vita]
title_id = "VITASHELL"
title_name = "Test app"
assets = "static"
# You can choose a subset of std or use panic_abort if you don't need unwinding
build_std = "std,panic_unwind"
# You can provide a custom JSON file spec
vita_strip_flags = ["-g"]
vita_make_fself_flags = ["-s"]
vita_mksfoex_flags = ["-d", "ATTRIBUTE2=12"]
