[package]
name = "cargo-vita"
version = "0.2.0"
edition = "2021"
description = "Cargo wrapper for developing Sony PlayStation Vita homebrew apps"
repository = "https://github.com/vita-rust/cargo-vita"
license = "MIT OR Apache-2.0"

authors = ["vita-sdk", "Nikolay Arhipov <n@arhipov.net>"]
keywords = ["vita", "homebrew"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
exclude = [".github", ".vscode", "target", "cliff.toml"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.18.0"
clap = { version = "4.4.2", features = ["derive", "env"] }
colored = "2.0.4"
either = "1.9.0"
enum_dispatch = "0.3.12"
env_logger = "0.11.3"
log = "0.4.20"
rustc_version = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
suppaftp = { version = "5.2.1" }
tee = "0.1.0"
tempfile = "3.8.0"
walkdir = "2.4.0"
local-ip-address = "0.6.1"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
similar_names = "allow"
unwrap_used = "deny"
expect_used = "deny"
